# stripe-checkout-python

./: README.md  index.html  main.py  pyproject.toml  util.py
templates/: index.html
