[tool.poetry]
name = "stripe-python-checkout"
version = "0.1.0"
description = ""
authors = ["Abhijeet-Agarwal <abhijeet@cococart.co>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
